--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   flutter_device_type: ^0.4.0
   emoji_picker_flutter: ^1.6.1
   screenshot: ^2.1.0
+  http: ^0.13.6
 
 
 
@@ -97,6 +98,7 @@ dev_dependencies:
   json_serializable: ^6.3.1
   build_runner: ^2.2.0
   flutter_native_splash: ^2.3.2
+
 
 
 
