--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.9+33
+version: 1.2.0+34
 
 environment:
   sdk: ">=2.18.6 <3.0.0"
@@ -52,7 +52,7 @@ dependencies:
   image_picker: ^1.0.0
   syncfusion_flutter_calendar: ^20.4.51
   flutter_cached_pdfview: ^0.4.1
-  path_provider: ^2.0.12
+  path_provider: ^2.1.1
   video_player: ^2.4.7
   native_video_view: ^1.0.5
   connectivity_plus: ^2.3.7
@@ -84,6 +84,7 @@ dependencies:
   emoji_picker_flutter: ^1.6.1
   screenshot: ^2.1.0
   http: ^0.13.6
+  epub_view: ^3.2.0
 
 
 
@@ -97,7 +98,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.3.1
   build_runner: ^2.2.0
-  flutter_native_splash: ^2.3.2
+
 
 
 
